add some html code to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,39 @@
-<html>
+<!DOCTYPE html >
+<html lang="en" dir="rtl">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title> تست سایت </title>
+</head>
+
+<body>
+    <section>
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="https://www.google.com/">گوگل</a></li>
+                <li><a href="https://web.whatsapp.com/">یوتیوب</a></li>
+                <li><a href="https://youtube.com/">واتساپ</a></li>
+
+            </ul>
+        </nav>
+    </section>
+    <h1>به " تست سایت " خوش امدید</h1>
+    <div class="image">
+        <img src="../gallery/noimage_1.jpg" alt="عکس پیش فرض">
+    </div>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br> consequuntur officiis placeat sunt animi <em> commodi repellendus</em> recusandae consequatur,<br>
+        <strong>nulla adipisci impedit omnis</strong> , quae dolore, corporis assumenda cum. Quo.</p>
+    <hr>
+    <div>
+        <video class="video" controls>
+            <source src="../gallery/test-360p.mp4" >
+                امکان لود شدن ویدئو شما موجود نمیباشد
+        </video>
+    </div>
+</body>
+
 </html>
