--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section>
+    <header>
         <nav class="nav-menu">
             <ul>
                 <li><a href="https://www.google.com/">گوگل</a></li>
@@ -18,7 +18,7 @@
 
             </ul>
         </nav>
-    </section>
+    </header>
     <h1>به " تست سایت " خوش امدید</h1>
     <div class="image">
         <img src="../gallery/noimage_1.jpg" alt="عکس پیش فرض">
