added <header> to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-    <section>
-        <nav class="nav-menu">
-            <ul>
-                <li><a href="https://www.google.com/">گوگل</a></li>
-                <li><a href="https://web.whatsapp.com/">یوتیوب</a></li>
-                <li><a href="https://youtube.com/">واتساپ</a></li>
+    <header>
+        <section>
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="https://www.google.com/">گوگل</a></li>
+                    <li><a href="https://web.whatsapp.com/">یوتیوب</a></li>
+                    <li><a href="https://youtube.com/">واتساپ</a></li>
 
-            </ul>
-        </nav>
-    </section>
+                </ul>
+            </nav>
+        </section>
+    </header>
     <h1>به " تست سایت " خوش امدید</h1>
     <div class="image">
         <img src="../gallery/noimage_1.jpg" alt="عکس پیش فرض">
